bugfix for datasource dropdown breaking out of container

--- a/projects/OG-Web/web-engine/prototype/styles/analytics/og.analytics.OG-analytics-form-menu.css
+++ b/projects/OG-Web/web-engine/prototype/styles/analytics/og.analytics.OG-analytics-form-menu.css
@@ -127,7 +127,7 @@
     }
 
     .OG-analytics-form-menu.og-menu-datasources tr td select.source{
-        width: 100%;
+        width: auto;
         min-width: 256px;
     }
 
